Add option to dump JSON file with received data

--- a/custom_components/cozytouch/translations/en.json
+++ b/custom_components/cozytouch/translations/en.json
@@ -17,7 +17,8 @@
             },
             "select_device": {
                 "data": {
-                  "create_unknown": "Create entities for unknown capabilities"
+                  "create_unknown": "Create entities for unknown capabilities",
+                  "dump_json": "Dump a JSON file with received data"
                 }
               }
         }
