Code cleanup and add some sensors/devices

--- a/custom_components/cozytouch/translations/en.json
+++ b/custom_components/cozytouch/translations/en.json
@@ -22,5 +22,15 @@
                 }
               }
         }
-   }
+   },
+   "options": {
+        "step": {
+            "init": {
+                "data": {
+                    "create_unknown": "Create entities for unknown capabilities",
+                    "dump_json": "Dump a JSON file with received data"
+                }
+            }
+        }
+    }
 }
