--- a/custom_components/cozytouch/translations/en.json
+++ b/custom_components/cozytouch/translations/en.json
@@ -32,5 +32,12 @@
                 }
             }
         }
+    },
+    "entity": {
+        "sensor": {
+            "Thermostat Temperature": {
+                "name": "Test"
+            }
+        }
     }
 }
