Fix mistake for climate entities in previous push Add model name, serial number, radio signal Add "override" mode as "auto" for Alfea Extensa Duo A.I. 3 R32

--- a/custom_components/cozytouch/translations/fr.json
+++ b/custom_components/cozytouch/translations/fr.json
@@ -186,6 +186,7 @@
             "hot_water_available":      { "name": "Hot Water Available" },
             "interface_fw":             { "name": "Interface FW" },
             "temperature_setpoint":     { "name": "Température Consigne" },
+            "model_name":               { "name": "Modèle" },
             "number_of_hours_burner":   { "name": "Nb heures brûleur" },
             "number_of_hours_ch_pump":  { "name": "Nb heures pompe CH" },
             "number_of_hours_dhw_pump": { "name": "Nb heures pompe DHW" },
@@ -200,6 +201,7 @@
             "power_consumption":        { "name": "Consommation" },
             "powerful_mode":            { "name": "Mode Powerful" },
             "presence_mode":            { "name": "Mode Présence" },
+            "product_number":           { "name": "Numéro de Produit" },
             "prog_01":                  { "name": "Prog 01 (Lun)" },
             "prog_01_z1":               { "name": "Prog 01 (Lun Z1)" },
             "prog_02":                  { "name": "Prog 02 (Mar)" },
@@ -237,7 +239,9 @@
             "prog_heat_sunday":         { "name": "Dimanche Prog Heat" },
             "prog_mode":                { "name": "Mode Prog" },
             "quiet_mode":               { "name": "Mode Silence" },
+            "radio_signal":             { "name": "Signal Radio" },
             "resistance":               { "name": "Résistance" },
+            "serial_number":            { "name": "Numéro de Série" },
             "swing_mode":               { "name": "Mode Oscillation" },
             "tank_bottom_temperature":  { "name": "Température Bas Réservoir" },
             "tank_capacity":            { "name": "Capacité Réservoir" },
