add prog_override sensor and translations

--- a/custom_components/cozytouch/translations/en.json
+++ b/custom_components/cozytouch/translations/en.json
@@ -238,6 +238,7 @@
             "prog_heat_saturday":       { "name": "Saturday Heat prog" },
             "prog_heat_sunday":         { "name": "Sunday Heat prog" },
             "prog_mode":                { "name": "Prog Mode" },
+            "prog_override":            { "name": "Override" },
             "quiet_mode":               { "name": "Quiet Mode" },
             "radio_signal":             { "name": "Radio Signal" },
             "resistance":               { "name": "Resistance" },
@@ -273,6 +274,7 @@
             "powerful_mode":      { "name": "Powerful Mode" },
             "presence_mode":      { "name": "Presence Mode" },
             "prog_mode":          { "name": "Prog Mode" },
+            "prog_override":      { "name": "Override" },
             "quiet_mode":         { "name": "Quiet Mode" },
             "swing_mode":         { "name": "Swing Mode" }
         }
