--- a/custom_components/cozytouch/translations/en.json
+++ b/custom_components/cozytouch/translations/en.json
@@ -140,6 +140,7 @@
         },
         "number": {
             "away_mode_temperature":    { "name": "Away Mode Temperature" },
+            "boost_timeout_max":        { "name": "Boost Timeout Max." },
             "override_total_time":      { "name": "Override Total Time" },
             "override_total_time_z1":   { "name": "Override Total Time Z1" },
             "override_total_time_z2":   { "name": "Override Total Time Z2" },
@@ -167,7 +168,6 @@
             "away_mode_start":          { "name": "Away Mode Start" },
             "away_mode_stop":           { "name": "Away Mode Stop" },
             "boiler_water_temperature": { "name": "Boiler Water Temperature" },
-            "boost_mode":               { "name": "Boost Mode" },
             "boost_total_time":         { "name": "Boost Total Time" },
             "boost_remaining_time":     { "name": "Boost Remaining Time" },
             "boost_timeout_max":        { "name": "Boost Timeout Max." },
