Fix en.json translation file

--- a/custom_components/cozytouch/translations/en.json
+++ b/custom_components/cozytouch/translations/en.json
@@ -168,9 +168,9 @@
             "away_mode_start":          { "name": "Away Mode Start" },
             "away_mode_stop":           { "name": "Away Mode Stop" },
             "boiler_water_temperature": { "name": "Boiler Water Temperature" },
+            "boost_mode":               { "name": "Boost Mode" },
             "boost_total_time":         { "name": "Boost Total Time" },
             "boost_remaining_time":     { "name": "Boost Remaining Time" },
-            "boost_timeout_max":        { "name": "Boost Timeout Max." },
             "central_heating":          { "name": "Central Heating" },
             "ch_power_consumption":     { "name": "CH Power consumption" },
             "condenser_temperature":    { "name": "Condenser Temperature" },
